# ngchina2020-bazel

./: .bazelrc  BUILD.bazel  WORKSPACE  bazel-bin  bazel-ngchina2020-bazel  bazel-testlogs  graph.in  package.json  tsconfig.app.json
projects/server/: BUILD.bazel  main.ts  tsconfig.json
projects/shared/: BUILD.bazel  tsconfig.json  user.ts
projects/typescript/src/: BUILD.bazel
projects/typescript/src/app/: BUILD.bazel
projects/typescript/src/e2e/: BUILD.bazel
projects/typescript/src/lib/: BUILD.bazel  user.ts
projects/typescript/src/lib/test/: BUILD.bazel
src/app/: app.component.html  app.component.ts  app.module.ts
