load("@npm//@bazel/rollup:index.bzl", "rollup_bundle")
load("@npm//@bazel/typescript:index.bzl", "ts_devserver")
load("@npm//@bazel/terser:index.bzl", "terser_minified")

exports_files(
    ["tsconfig.json"],
    visibility = ["//visibility:public"],
)

rollup_bundle(
    name = "app_bundle",
    entry_point = "//src/app:birthday_card.ts",
    deps = ["//src/app"],
)

terser_minified(
    name = "app_bundle_min",
    src = ":app_bundle.es2015.js",
)

ts_devserver(
    name = "devserver",
    port = 4200,
    visibility = ["//src:__subpackages__"],
    deps = [
        ":app_bundle.es2015.js",
    ],
)
