load("@npm//@bazel/typescript:index.bzl", "ts_library")

exports_files(
    ["birthday_card.ts"],
    visibility = ["//visibility:public"],
)

ts_library(
    name = "app",
    srcs = [":birthday_card.ts"],
    tsconfig = "//projects/typescript/src:tsconfig.json",
    visibility = ["//visibility:public"],
    deps = ["//projects/typescript/src/lib"],
)
