load("@npm//@bazel/typescript:index.bzl", "ts_library")

ts_library(
    name = "date",
    srcs = [":date.ts"],
    tsconfig = "//projects/typescript/src:tsconfig.json",
    visibility = ["//src/lib:__subpackages__"],
)

ts_library(
    name = "user",
    srcs = [":user.ts"],
    tsconfig = "//projects/typescript/src:tsconfig.json",
    deps = [":date"],
)

ts_library(
    name = "lib",
    srcs = [":index.ts"],
    tags = ["build-target"],
    tsconfig = "//projects/typescript/src:tsconfig.json",
    visibility = ["//visibility:public"],
    deps = [
        ":date",
        ":user",
    ],
)
